--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home - Cooking Helper</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+  <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="{{ url_for('index') }}" class="nav-logo">🍳 Cooking Helper</a>
+      <a href="/" class="nav-logo">🍳 Cooking Helper</a>
       <ul class="nav-links">
-        <li><a href="{{ url_for('index') }}" class="active">Home</a></li>
-        <li><a href="{{ url_for('assistant') }}">Assistant</a></li>
-        <li><a href="{{ url_for('community') }}">Community</a></li>
+        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/assistant">Assistant</a></li>
+        <li><a href="/community">Community</a></li>
       </ul>
     </div>
   </nav>
@@ -24,7 +24,7 @@
     <div class="hero-content">
       <h1>Welcome to <span>Cooking Helper</span></h1>
       <p>Your cozy corner for stress-free, joyful cooking.</p>
-      <a href="{{ url_for('assistant') }}" class="btn-primary">🍲 Get Started</a>
+      <a href="/assistant" class="btn-primary">🍲 Get Started</a>
     </div>
   </section>
 </body>
